<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:fillViewport="true"
    android:id="@+id/rootLayout"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:background="#484848">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icc"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name" />


            <GridLayout
                android:id="@+id/gridnews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:columnCount="4"
                android:rowCount="3">




                <LinearLayout
                    android:id="@+id/abc_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_margin="3dp"
                    android:layout_row="0"
                    android:padding="10dp"
                    android:background="#728a74"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/abcnews"
                        android:contentDescription="@string/abc" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/abc"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/arkam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_margin="3dp"
                    android:layout_row="0"

                    android:padding="10dp"
                    android:background="#cb707f"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/arkamnews"
                        android:contentDescription="@string/argaam" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/argaam"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/buzz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_margin="3dp"
                    android:padding="10dp"
                    android:layout_row="1"
                    android:background="#a180a4"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/buzznews"
                        android:contentDescription="@string/buzz" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/buzz"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/cnn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:layout_margin="3dp"
                    android:padding="10dp"
                    android:weightSum="2"
                    android:background="#8eb9b9"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/cnnicon"
                        android:contentDescription="@string/cnn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/cnn"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/daily_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:layout_margin="3dp"
                    android:padding="10dp"
                    android:weightSum="2"
                    android:background="#9d997e"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/dailymailicon"
                        android:contentDescription="@string/daily" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/daily"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="2"
                    android:padding="10dp"
                    android:layout_margin="3dp"
                    android:weightSum="2"
                    android:background="#b6b9dc"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/google"
                        android:contentDescription="@string/google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/google"
                        android:padding="3dp"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                </LinearLayout>

            </GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="13dp"
                android:background="#fff"/>

            <TextView
                android:id="@+id/saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_gravity="center"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#fff"
                android:text="@string/saqved"
                android:drawableLeft="@drawable/savh"
                android:drawableStart="@drawable/savh" />

            <TextView
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_gravity="center"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="#fff"
                android:text="@string/refresh"
                android:drawableLeft="@drawable/refresh"
                android:drawableStart="@drawable/refresh" />
        </LinearLayout>



</ScrollView>