<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/daytext"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="23dp"
            android:background="#111" />
    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardback"
            android:orientation="vertical">

            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_drawable">


                <ImageView
                    android:id="@+id/news_image"
                    android:contentDescription="@string/newsImage"
                    android:scaleType="centerCrop"
                    app:layout_aspectRatio="178%"
                    app:layout_widthPercent="100%"
                    tools:src="@drawable/penc" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignBottom="@id/news_image"
                    android:background="@drawable/custom_drawable">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/wid_brn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/widget"
                            android:textColor="#fff" />


                        <ImageView
                            android:id="@+id/share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/share"
                            android:src="@android:drawable/ic_menu_share" />

                        <CheckBox
                            android:id="@+id/save_CheckBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="3dp"
                            android:button="@drawable/checkbox"
                            android:contentDescription="@string/check"
                            android:scaleType="fitXY" />


                    </LinearLayout>
                </RelativeLayout>

            </android.support.percent.PercentRelativeLayout>


            <TextView
                android:id="@+id/news_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="18dp"
                android:maxLines="1" />

            <TextView
                android:id="@+id/news_time"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/news_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:maxLines="4" />


        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>